--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,6 +1,9 @@
 #app {
-  width: 400px;
-  height: 600px;
+  width: 100%;
+  max-width: 500px;
+  height: 100vh;
+  max-height: 600px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   overflow: hidden;
